@@ -1,3 +1,4 @@
+* Manage create/delete field access
 * Add dynamic size limit on the One2Many, Many2Many and Char
 * Search only on fields in XML view
 * Cache action keyword
